add join network script